# spacedrive

./: CONTRIBUTING.md  README.md  build-server.sh  bun.lockb  justfile  package.json  pnpm-lock.yaml  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: release.yml
.tasks/core/: NET-004-tailscale-integration.md  RED-000-redundancy-awareness.md
apps/cli/src/: main.rs
apps/desktop/src-tauri/: Cargo.toml
apps/mobile/: metro.config.js  package.json  tailwind.config.js
apps/server/: Cargo.toml  Dockerfile  build.rs
apps/server/src/: main.rs
apps/tauri/: package.json  tsconfig.json  vite.config.ts
apps/tauri/src/: App.tsx  env.d.ts  index.css  platform.ts  updater.example.ts
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: index.css  (+1 more)
core/: Cargo.toml
core/examples/: create_memory.rs  file_type_demo.rs  library_demo.rs  pause_resume_demo.rs  simple_pause_resume.rs  test_migration.rs  volume_demo.rs
core/src/: lib.rs
core/tests/: ephemeral_watcher_test.rs  file_structure_test.rs  file_sync_simple_test.rs  file_sync_test.rs  fs_watcher_test.rs  job_resumption_integration_test.rs  job_shutdown_test.rs  normalized_cache_fixtures_test.rs  proxy_pairing_protocol_test.rs  relay_pairing_test.rs  resource_events_test.rs  transitive_sync_backfill_test.rs  volume_fingerprint_stability_test.rs
docs/: docs.json  mint.json
docs/core/: filesystems.mdx
docs/design/: MIGRATE-TO-SPACEUI.md  POPOVER-REFACTOR.md
interface/: ErrorFallback.tsx
interface/locales/: cs
scripts/utils/: consts.mjs
xtask/src/: main.rs
(+114 files in other folders)
