[package]
name    = "sd-server"
version = "2.0.0-alpha.2"
edition = "2021"

[features]
default = []
heif = ["sd-core/heif"]
ffmpeg = ["sd-core/ffmpeg"]
whisper = ["sd-core/whisper"]
speech-to-text = ["sd-core/speech-to-text"]
ai = ["sd-core/ai"]

[dependencies]
# Spacedrive core
sd-core = { path = "../../core" }

# HTTP server
axum       = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
http       = "1.1"
tokio      = { version = "1", features = ["rt-multi-thread", "signal", "sync", "io-util"] }
tokio-stream = "0.1"
tower      = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
futures    = "0.3"

# Embedded web UI
rust-embed = "8"
mime_guess = "2"

# Auth
secstr = "0.5"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow    = "1"
thiserror = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Dev dependencies
tempfile = "3"

[[bin]]
name = "sd-server"
path = "src/main.rs"